--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,5 +2,8 @@
     "AdminNavigationBar": {
         "Dashboard": "Dashboard",
         "Orders": "Orders"
+    },
+    "AdminHeader": {
+        "Title" : "Fast Food Pro Backoffice"
     }
 }
