- solved issues for ordering overview - added address field for establishment

--- a/src/app/pages/establishment/translations/en.json
+++ b/src/app/pages/establishment/translations/en.json
@@ -1,6 +1,7 @@
 {
   "EstablishmentsOverview": {
     "id": "Id",
+    "address": "Address",
     "country": "Country",
     "city": "City",
     "street": "Street",
