--- a/src/app/pages/orderings/translations/en.json
+++ b/src/app/pages/orderings/translations/en.json
@@ -1,5 +1,5 @@
 {
-  "EstablishmentsOverview": {
+  "OrderingOverview": {
     "id": "Id",
     "cardNumber": "Card number",
     "paymentMethod": "Payment method",
