- displayed images of users

--- a/src/app/pages/users/translations/en.json
+++ b/src/app/pages/users/translations/en.json
@@ -1,5 +1,6 @@
 {
   "UsersOverview": {
+    "imageUrl": "Picture",
     "fullName": "Name",
     "birthday": "Birthday",
     "address": "Address",
